Added eslint override for class-method-use-this on command implementations

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,13 @@
         "@typescript-eslint"
     ],
     "rules": {
-    }
+    },
+    "overrides": [
+        {
+            "files": ["./src/commands/dev/**/*.ts"],
+            "rules": {
+                "class-methods-use-this": "off"
+            }
+        }
+    ]
 }
