--- a/package.json
+++ b/package.json
@@ -20,6 +20,16 @@
     "url": "https://github.com/chew01/djs-v13-typescript-template/issues"
   },
   "homepage": "https://github.com/chew01/djs-v13-typescript-template#readme",
+  "dependencies": {
+    "@discordjs/rest": "^0.5.0-dev.1651493333-4ba0f56",
+    "chalk": "^4.1.2",
+    "dayjs": "^1.11.2",
+    "discord-api-types": "^0.32.1",
+    "discord.js": "^14.0.0-dev.1651493371-4ba0f56",
+    "dotenv": "^16.0.0",
+    "pino": "^7.11.0",
+    "pino-pretty": "^7.6.1"
+  },
   "devDependencies": {
     "@tsconfig/node16-strictest": "^1.0.1",
     "@types/node": "^17.0.31",
@@ -31,14 +41,5 @@
     "eslint-plugin-import": "^2.26.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
-  },
-  "dependencies": {
-    "@discordjs/rest": "^0.5.0-dev.1651493333-4ba0f56",
-    "chalk": "^4.1.2",
-    "dayjs": "^1.11.2",
-    "discord-api-types": "^0.32.1",
-    "discord.js": "^14.0.0-dev.1651493371-4ba0f56",
-    "dotenv": "^16.0.0",
-    "loglevel": "^1.8.0"
   }
 }
